--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -20,5 +18,9 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "17.0.1",
     "react-query": "^3.12.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.24.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
